Updated handlebars version. Fixed overlapping
image in authors block.

--- a/tool/src/webapp/css/clog.css
+++ b/tool/src/webapp/css/clog.css
@@ -9,6 +9,7 @@
 	
 .postInnerContainer{
 	margin: 5px;
+    padding-bottom: 5px;
 }
 
 #postsWrapper{
@@ -28,9 +29,8 @@
 
 .clog_author{
 	float: right;
-	font-size:12px;
-	clear:right;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .postOptionsPanel{
@@ -160,6 +160,10 @@ th.clogSortableTableHeaderSortDown {
 .clog_author_image_div {
 	float: right;
 	margin-left: 5px;
+}
+
+.clog_author_image_div img {
+    height: 50px;
 }
 
 .clog_author_details_div {
